--- a/frames/package.json
+++ b/frames/package.json
@@ -11,7 +11,7 @@
     "@kodadot1/minipfs": "^0.4.3-rc.1",
     "@kodadot1/uniquery": "^0.5.1",
     "@polkadot/util-crypto": "^12.6.2",
-    "frog": "latest",
+    "frog": "^0.6.5",
     "hono": "^4",
     "ofetch": "^1.3.3"
   },
